--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+h1 {
+  text-transform: uppercase;
+  margin-bottom: 0;
+  font-family: 'Orelega One';
+
+}
+
+h3 {
+  margin-top: 0;
+
+}
+
+.inputEl {
+  display: flex;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 1em;
+  margin: 1em;
+}
+
+.inputField {
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.inputField:focus  {
+  outline: none;
+  border: 1px solid rgb(48, 48, 48);
+}
+
+input[type=checkbox]:focus  {
+  outline-width: 0.1em;
+  outline-color: #ccc;
+}
+
+
+.inputButton {
+  border: none;
+  border-radius: 5px;
+  background-color: #51784F;
+  padding: 0.5em;
+  font-family: 'Orelega One';
+  text-transform: uppercase;
+  min-width: 100px;
+
+}
+
+.inputButton:hover {
+  background-color: #03b703;
+  cursor: pointer;
+  transform: scale(1.03);
+}
+
+.inputButton:active {
+  transform: scale(0.98);
+}
+
+.inputButton:focus {
+  outline: 1px solid rgb(115, 115, 115);;
+}
+
+/* TODOS RENDERING */
+.todosEl {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  max-width: 400px;
+  align-items: center;
+}
+
+.deleteButton {
+  border: none;
+  font-family: 'Nunito Sans', sans-serif;
+  border-radius: 5px;
+  color: grey;
+  background-color: #F4D3EC;
+  margin: 0.5em;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.deleteButton:hover {
+  background-color: rgb(255, 54, 54);
+  transform: scale(1.03);
+  color: black;
+}
+
+.deleteButton:active {
+  transform: scale(0.98);
+}
+
+.doneTask {
+  text-decoration: line-through;
+  color: grey;
+}
+
+/* FILTERS */
+#filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin: 1e;
+}
+
+.filterButton {
+  background-color: #FDF7F2;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5em;
+  margin: 0 0.5em;
+  color: #7A7A7A;
+}
+
+.filterButton:hover {
+  background-color: #51784F;
+  transform: scale(1.03);
+  color: #51784F;
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#filters p {
+  color: #7A7A7A;
 }
