--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ input[type=checkbox]:focus  {
   align-items: center;
   width: 100%;
   margin: 1e;
+  font-size: x-small;
 }
 
 .filterButton {
@@ -120,6 +121,7 @@ input[type=checkbox]:focus  {
   padding: 0.5em;
   margin: 0 0.5em;
   color: #7A7A7A;
+  font-size: x-small;
 }
 
 .filterButton:hover {
@@ -128,8 +130,4 @@ input[type=checkbox]:focus  {
   color: #51784F;
   cursor: pointer;
   color: white;
-}
-
-#filters p {
-  color: #7A7A7A;
 }
